--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>,
+<footer>
+    
+    <ul>
+        <a href="">
+            <li>Sosyal Medya</li>
+        </a><a href="">
+            <li>Destek ve Yardım</li>
+        </a><a href="">
+            <li>Hakkımızda</li>
+        </a>
+    </ul>
+    <div class="lisans">
+        © 2024 Tobeto şirketidir. Tüm hakları saklıdır. Kredi kartı bilgileriniz 256 bit SSL sertifikası ile korunmaktadır.
+    </div>
+</footer>
