--- a/src/app/routh/login-page/login-page.component.css
+++ b/src/app/routh/login-page/login-page.component.css
@@ -6,13 +6,12 @@
 }
 
 .body{
-    background-color: #c9d6ff;
-    background: linear-gradient(to right, #e2e2e2,#c9d6ff);
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 75vh;
 }
 
 .container{
@@ -38,14 +37,14 @@
 }
 
 .container a{
-    color: #333;
+    color: #fe620e;
     font-size: 13px;
     text-decoration: none;
     margin: 15px 0 10px;
 }
 
 .container button,.container input[type="submit"]{
-    background-color: #512da8;
+    background-color: #f07417;
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -128,7 +127,8 @@
     margin: 20px 0;
 }
 .social-icons a{
-    border: 1px solid #ccc;
+    border: 1px solid #ff942c;
+    box-shadow: 0px 0px 2px #f07417;
     border-radius: 20%;
     display: inline-flex;
     justify-content: center;
@@ -158,7 +158,7 @@
 .toggle{
     background-color: #512da8;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
+    background: linear-gradient(to right, #ff942c, #f07417,#fe620e);
     color: #fff;
     position: relative;
     left: -100%;
@@ -198,4 +198,7 @@
 }
 .container.active .toggle-right{
     transform: translateX(200%);
+}
+form h1{
+    color: #f07417;
 }
