--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@
 *{
     margin: 0;
 }
+body{
+    /*background-color: #dedede;*/
+    background-image:url("/assets/background/Maldives.jpg"); 
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    overflow-x:hidden;
+    height: max-content;
+    
+}
