--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -6,7 +6,7 @@
 </a>
     <ul>
         <a routerLink=""><li><i class="fa-solid fa-heart icon"></i>Favoriler</li></a>
-        <a routerLink=""><li><i class="fa-solid fa-earth-americas icon"></i>{{Language}}-{{Currency}}</li></a>
+        <a><li><i class="fa-solid fa-earth-americas icon"></i>{{Language}}-{{Currency}}</li></a>
         <a routerLink="/login"><li id="login"><i class="fa-solid fa-user icon"></i>Giriş Yap</li></a>
     </ul>
 </nav>
