arka plan ayarlaması yapıldı

--- a/src/app/shared/hotel-filter/hotel-filter.component.html
+++ b/src/app/shared/hotel-filter/hotel-filter.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="search-box">
       <div class="location">
-          <button (click)="isActive()">Nereye?</button>
+          <a routerLink="/location"><button (click)="isActive()">Nereye?</button></a>
           <i class="fa-solid fa-location-dot loc-icon"></i>
       </div>
       <div class="calendar">
