--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    
+    <div class="siteTitle"><em>CheckInflex</em></div>
     <ul>
         <a href="">
             <li>Sosyal Medya</li>
