--- a/src/app/routh/home-page/home-page.component.html
+++ b/src/app/routh/home-page/home-page.component.html
@@ -1,4 +1,4 @@
 <app-basic-layout>
     <app-hotel-filter (changeClick)="onFilterChange($event)"></app-hotel-filter>
-    <app-location *ngIf="active"></app-location>
+    <!-- <app-location *ngIf="active"></app-location> -->
 </app-basic-layout>
