ngx kütüphanesi entegre edildi home-page ve login-page de kullanıldı

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -2,14 +2,14 @@
     <div class="siteTitle"><em>CheckInflex</em></div>
     <ul>
         <a href="">
-            <li>Sosyal Medya</li>
+            <li>{{"Social Media" | translate}}</li>
         </a><a href="">
-            <li>Destek ve Yardım</li>
+            <li>{{"Support and Help" | translate}}</li>
         </a><a href="">
-            <li>Hakkımızda</li>
+            <li>{{"About" | translate}}</li>
         </a>
     </ul>
     <div class="lisans">
-        © 2024 Tobeto şirketidir. Tüm hakları saklıdır. Kredi kartı bilgileriniz 256 bit SSL sertifikası ile korunmaktadır.
+        © 2024 {{"It is Tobeto company. All rights reserved. Your credit card information is protected by a 256 bit SSL certificate." | translate}}
     </div>
 </footer>
