--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav>
     <a routerLink="/home">
         <div class="logo">
-        <img src="/assets/logo/logo.png" alt="logo">
+        <img src="/assets/logo/CheckInflex.png4.png" alt="logo">
     </div>
 </a>
     <ul>
@@ -11,6 +11,7 @@
             <option value="tr">Türkçe</option>
             <!-- <option value="ru">Русский-RU</option> -->
         </select></li>
+        <a routerLink="/help-support" class="log"><li id="login">{{"Support" | translate}}</li></a>
         <a routerLink="/login" class="log"><i class="fa-solid fa-user icon"></i><li id="login">{{"Login" | translate}}</li></a>
     </ul>
 </nav>
