--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .hotelfilter-background {
   
   }
+  
+  .help-support-background{
+    background-image: url("/assets/background/3.jpg");
+  }
