--- a/src/app/routh/login-page/login-page.component.html
+++ b/src/app/routh/login-page/login-page.component.html
@@ -8,7 +8,7 @@
                         <a href="" class="icon"><i class="fa-brands fa-google"></i></a>
                         <a href="" class="icon"><i class="fa-brands fa-facebook"></i></a>
                     </div>
-                    <span>ore use your email for registeration</span>
+                    <span>More use your email for registeration</span>
                     <input type="text" placeholder="Fisrt Name" formControlName="firstName">
                     <input type="text" placeholder="Last Name" formControlName="lastName">
                     <input type="email" placeholder="Email" formControlName="email">
@@ -24,7 +24,7 @@
                         <a href="" class="icon"><i class="fa-brands fa-google"></i></a>
                         <a href="" class="icon"><i class="fa-brands fa-facebook"></i></a>
                     </div>
-                    <span>ore use your email password</span>
+                    <span>More use your email password</span>
                     <input type="email" placeholder="Email" formControlName="email">
                     <input type="password" placeholder="Password" formControlName="password">
                     <a href="#">Forget Your Password</a>
