--- a/src/app/shared/support-request-list/support-request-list.component.html
+++ b/src/app/shared/support-request-list/support-request-list.component.html
@@ -1,5 +1,5 @@
 <div class="support-request-list">
-    <h2>{{ 'SUPPORT_REQUESTS' | translate }}</h2>
+    <h2>{{ 'Support Replies' | translate }}</h2>
     <ul>
       <li *ngFor="let request of supportRequests">
         <h3>{{ request.subject }}</h3>
