faq- support-help completed

--- a/src/app/shared/faq-list/faq-list.component.html
+++ b/src/app/shared/faq-list/faq-list.component.html
@@ -1,7 +1,18 @@
-<ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
-</ul>
+<app-basic-layout>
+    <div id="sss">
+        <ul>
+            @for ( listItem of faqList; track $index) {
+            <li>
+                <div (click)="toggleAnswer($index)" class="question">
+                {{listItem.question}}
+            </div>
+        </li>
+        @if (listItem.showAnswer) {
+            <div>
+                {{listItem.answer}}
+            </div>
+        }
+    }
+        </ul>
+    </div>
+</app-basic-layout>
