--- a/src/app/shared/support-request-list/support-request-list.component.html
+++ b/src/app/shared/support-request-list/support-request-list.component.html
@@ -1,10 +1,16 @@
-<div class="support-request-list">
-    <h2>{{ 'Support Replies' | translate }}</h2>
-    <ul>
-      <li *ngFor="let request of supportRequests">
-        <h3>{{ request.subject }}</h3>
-        <p>{{ request.description }}</p>
-        <p><strong>{{ 'STATUS' | translate }}:</strong> {{ request.status }}</p>
-      </li>
-    </ul>
+<h2>{{ 'Support Replies' | translate }}</h2>
+<ul>
+  @for (request of supportRequests; track $index) {
+  <div class="message">
+    <li>
+      <div id="email"><small>{{request.userEmail}}</small></div>
+      <div class="info">
+        <div id="subject">{{ request.subject }}</div>
+      <textarea>{{ request.description }}</textarea>
+      <!-- <p><strong>{{ 'STATUS' | translate }}:</strong> {{ request.status }}</p> -->
+      </div>
+    </li>
   </div>
+
+  }
+</ul>
